clusters/sirius/apps/audiobookbay-downloader/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookbay-downloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookbay-downloader
  template:
    metadata:
      labels:
        app: audiobookbay-downloader
    spec:
      securityContext:
        fsGroup: 0
      containers:
        - name: audiobookbay-downloader
          image: ghcr.io/moonblade/audiobookbay-downloader:ts_1782389331 # {"$imagepolicy": "audiobookbay-downloader:audiobookbay-downloader"}
          ports:
            - containerPort: 9000
          readinessProbe:
            exec:
              command: ["test", "-f", "/config/DONOTDELETE"]
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
              subPath: complete
              mountPropagation: HostToContainer
            - name: audiobooks
              mountPath: /audiobooks
              mountPropagation: HostToContainer
            - name: beetsconfig
              mountPath: /config/config.yaml
              subPath: config.yaml
      volumes:
        - name: config
          nfs:
            server: nfs.sirius.local
            path: /mnt/primary/root/config/audiobookbay-downloader
            readOnly: false
        - name: downloads
          nfs:
            server: nfs.sirius.local
            path: /mnt/primary/root/downloads
            readOnly: false
        - name: audiobooks
          nfs:
            server: nfs.sirius.local
            path: /mnt/primary/root/audiobooks
            readOnly: false
        - name: beetsconfig
          configMap:
            name: beetsconfig
