clusters/sirius/apps/audiobookbay-downloader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookbay-downloader
spec:
  selector:
    app: audiobookbay-downloader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
      name: http
  type: ClusterIP
