clusters/sirius/apps/audiobookbay-downloader/transmission.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  type: ExternalName
  externalName: transmission.transmission.svc.cluster.local
