clusters/sirius/apps/audiobookbay-downloader/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: audiobookbay-downloader
    app.kubernetes.io/name: audiobookbay-downloader
  annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
  name: audiobookbay-ingress
spec:
  tls:
  - hosts:
    - abb.sirius.moonblade.work
    secretName: audiobookbay-cert
  rules:
  - host: abb.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookbay-downloader
            port:
              name: http
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: audiobookbay-outer
#   annotations:
#     external-dns.alpha.kubernetes.io/hostname: ""
#   labels:
#     external-dns-exclude: "true"
# spec:
#   rules:
#   - host: abbsearch.moonblade.work
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: audiobookbay-downloader
#             port:
#               name: http
---
apiVersion: v1
kind: Service
metadata:
  name: audiobooksearch
spec:
  type: ExternalName
  externalName: audiobooksearch.authentik.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookbay-outer
spec:
  rules:
    - host: abbsearch.moonblade.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobooksearch
                port:
                  number: 9000
